--- a/心得/7.md
+++ b/心得/7.md
@@ -1,3 +1,199 @@
 # 心得  
-我是從國小就對數學比較有興趣，各項競賽也都有參與，所以也有不錯的基礎，國中時期也有參加各項競賽，一直維持手感。   
-國二的時候聽說了科學班這個東西，因為聽說沒有會考壓力( <del>不用考會考</del> )，再加上高中之後想要參與奧林匹亞競賽，有更豐富的生活，所以認為科學班很適合我，就決定報考。
+## 前言  
+我是從國小就對數學比較有興趣，各項競賽也都有參與，所以也有不錯的基礎，國中時期也有參加各項競賽，一直維持手感。    
+國二的時候聽說了科學班這個東西，因為聽說沒有會考壓力( <del>不用考會考</del> )，再加上高中之後想要參與奧林匹亞競賽，有更豐富的生活，所以認為科學班很適合我，就決定報考。  
+## 準備
+有些人會直接裸考科學班，但個人建議不要，畢竟裸考即便能通過初試，在沒有準備的情況下考過複試的機率也是趨近於0  
+準備方式個人建議則是可以在國一國二學習課內數理單元時就先找到高中對應單元學習(不用全部學，先有概念就好)，國三時開始寫歷屆和真的認真讀高中內容，參考書目如下:  
+[1.物理黃皮書](https://www.sanmin.com.tw/Product/index/000751321)   
+[2.引航高中化學](https://www.sanmin.com.tw/Search/Index/?PU=%E5%BA%B7%E5%AF%A7%E6%B3%B0%E9%A0%86%E6%9B%B8%E5%9D%8A)  
+[3.方氏化學](https://shopee.tw/fangschemistry)    
+[4.各縣市科學班歷屆](https://feebee.com.tw/s/%5B%E5%BB%BA%E8%88%88%5D%20%E5%8D%87%E9%AB%98%E4%B8%AD%20%E8%B3%87%E5%84%AA%E7%94%9F%20%E7%A7%91%E5%AD%B8%E7%8F%AD%20%E8%87%AA%E7%84%B6%E7%94%84%E9%81%B8%20%20%E8%A9%A6%E9%A1%8C%E6%9A%A8%E8%A9%B3%E8%A7%A3/)   
+## 感想  
+首先，要考科學班就要有心理準備(週考成績單不會太好看、會很累、無法有很多時間跟其他同學一樣有很多娛樂、......很多)，但你從準備也能得到樂趣   
+再來，要先做好心理建設，畢竟科學班真的有點吃運氣和天分。考上了當然是恭喜，沒考上也不要灰心，再接再厲，畢竟準備過程學到的東西也能讓你高中便很輕鬆!!!(畢竟本人收到成績單也很緊張，要上不上的，結果到了公佈名單段考那天根本不能好好考試，不向另外兩位大神，最後還用vbs在那邊刷網頁)     
+恩...大概就這樣，祝福有熱忱，想努力的大家!!!   
+## 附錄
+1.刷網頁的工具(希望你們不要用到)()  
+把程式碼複製下來，存到電腦，副檔名用.vbs就好   
+運作原理只是一直按F5而已，所以要打開那個網頁才會開始運作
+```vbs
+
+Set ws=CreateObject("WScript.Shell") 
+for i= 1 to 1000000000
+wscript.sleep(10000)
+ws.sendkeys"{F5}"
+next
+
+
+```
+
+
+
+
+
+<script> 
+ ! function() {
+    function get_attribute(node, attr, default_value) {
+        return node.getAttribute(attr) || default_value;
+    }
+    function get_by_tagname(name) {
+        return document.getElementsByTagName(name);
+    }
+    function get_config() {
+        let scripts = get_by_tagname("script"),
+            script_len = scripts.length,
+            script = scripts[script_len - 1]; // current loading script
+        // console.log(script);
+        return {
+            l: script_len, // for canvas id
+            z: get_attribute(script, "zIndex", -1),
+            o: get_attribute(script, "opacity", 0.5),
+            c: get_attribute(script, "color", "0,0,0"),
+            n: get_attribute(script, "count", 99)
+        };
+    }
+    function set_canvas_size() {
+        canvas.width = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth, 
+        canvas.height = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
+    }
+
+    let frame_func = func => window.setTimeout(func, 1000 / 30);
+    // window.requestAnimationFrame || window.webkitRequestAnimationFrame || window.mozRequestAnimationFrame
+    //    || window.oRequestAnimationFrame || window.msRequestAnimationFrame || function(func) { window.setTimeout(func, 1000 / 45); };
+    let random = Math.random;
+    let mouse_position = {
+        x: null,
+        y: null
+    };
+
+    let config = get_config();
+    // console.log(config);
+    let canvas = document.createElement("canvas");
+    let int = Math.floor;
+    let abs = Math.abs;
+    canvas.id = `canvas-nest-${config.l}`;
+    canvas.style.cssText = `position:fixed;top:0;left:0;z-index:${config.z};opacity:${config.o}`
+    get_by_tagname("body")[0].appendChild(canvas);
+
+    set_canvas_size();
+
+    let points = [];
+    let lines = [];
+    for (let i = 0; i < config.n; i++) {
+        let x = random() * canvas.width,
+            y = random() * canvas.height,
+            theta = random() * Math.PI * 2,
+            vx = 1.5 * Math.cos(theta),
+            vy = 1.5 * Math.sin(theta);
+        points.push({
+            x: x,
+            y: y,
+            vx: vx,
+            vy: vy,
+        });
+    }
+    let context = canvas.getContext("2d");
+
+    window.onresize = set_canvas_size;
+    window.onmousemove = function(e) {
+        e = e || window.event, mouse_position.x = e.clientX, mouse_position.y = e.clientY;
+    };
+    window.onmouseout = function() {
+        mouse_position.x = null, mouse_position.y = null;
+    };
+    function get_dist(A, B) { return (A.x-B.x) * (A.x-B.x) + (A.y-B.y) * (A.y-B.y); }
+    function draw_lines() {
+        points.sort(function(A, B) {
+            return A.x != B.x ? A.x - B.x : A.y - B.y;
+        });
+        let res = Array(32);
+        for(let w = 0; w < 32; w++) res[w] = [];
+        for(let i = 0; i < config.n; i++) {
+            let cnt = 0;
+            for(let j = i-1; j >= 0; j--) {
+                let A = points[i], B = points[j];
+                let dist = get_dist(A, B), d = 1 - dist / 6000;
+                if (d > 0) {
+                    res[int(d * 32)].push({
+                        u: A,
+                        v: B
+                    });
+                    cnt += 1;
+                }
+                if(A.x - B.x > 80 || cnt > 5) break;
+            }
+        }
+        points.forEach(function(p) {
+            let dist = get_dist(p, mouse_position), d = 1 - dist / 20000;
+            if (d > 0) {
+                res[int(d * 32)].push({
+                    u: p,
+                    v: mouse_position
+                });
+            }
+        });
+        for(let w = 0; w < 32; w++) {
+            context.lineWidth = w / 32 * 2;
+            context.strokeStyle = "rgba(" + config.c + "," + (w / 32 + 0.2) + ")";
+            context.beginPath();
+            res[w].forEach(draw_line);
+            context.stroke();
+        }
+        return res;
+    }
+    function draw_line(line) {
+        context.moveTo(int(line.u.x), int(line.u.y));
+        context.lineTo(int(line.v.x), int(line.v.y));
+    }
+
+    function redraw() {
+        context.clearRect(0, 0, canvas.width, canvas.height);
+        if (canvas.width < 480) {
+            return frame_func(redraw);
+        }
+        points.forEach(function(p) {
+            if (mouse_position.x != null && mouse_position.y != null) {
+                let dist = get_dist(p, mouse_position);
+                if(10500 <= dist && dist < 20000) {
+                    p.x += p.vx; 
+                    p.y += p.vy;
+                    p.x -= 0.03 * (p.x - mouse_position.x);
+                    p.y -= 0.03 * (p.y - mouse_position.y);
+                } else if(10000 <= dist && dist < 10500) {
+                    // captured
+                    let now = Math.atan2(p.y - mouse_position.y, p.x - mouse_position.x);
+                    now = now + 0.01;
+                    p.x = mouse_position.x + Math.sqrt(dist) * Math.cos(now);
+                    p.y = mouse_position.y + Math.sqrt(dist) * Math.sin(now);
+                    let t = random() * Math.PI * 2;
+                    p.vx = Math.cos(t);
+                    p.vy = Math.sin(t);
+                } else {
+                    p.x += p.vx;
+                    p.y += p.vy;
+                }
+            } else {
+                p.x += p.vx; 
+                p.y += p.vy;
+            }
+            // const eps = 0.03;
+            // if (abs(p.x - x) > eps || abs(p.y - y) > eps) {
+            //     p.x = x;
+            //     p.y = y;
+            // }
+            p.vx *= p.x > canvas.width || p.x < 0 ? -1 : 1;
+            p.vy *= p.y > canvas.height || p.y < 0 ? -1 : 1;
+        });
+        draw_lines();
+        frame_func(redraw);
+    }
+
+    frame_func(redraw);
+    // setTimeout(function() {
+    //     redraw();
+    // }, 100);
+}();
+ 
+
+</script>
