--- a/心得/7.md
+++ b/心得/7.md
@@ -14,6 +14,7 @@
 再來，要先做好心理建設，畢竟科學班真的有點吃運氣和天分。考上了當然是恭喜，沒考上也不要灰心，再接再厲，畢竟準備過程學到的東西也能讓你高中便很輕鬆!!!(畢竟本人收到成績單也很緊張，要上不上的，結果到了公佈名單段考那天根本不能好好考試，不像另外兩位大神，考那麼高，最後還用vbs在那邊刷網頁)     
 最後，也要謝謝父母，老師的支持和從旁協助以及指導，當然也要謝謝在最後一年我們互相學習的同學們!!!
 恩...大概就這樣，祝福有熱忱，想努力的大家!!!   
+2022/3/31 林晉宇
 ## 附錄
 1.刷網頁的工具(希望你們不要用到)()  
 把程式碼複製下來，存到電腦，副檔名用.vbs就好   
