--- a/心得/6.md
+++ b/心得/6.md
@@ -1,4 +1,5 @@
-# 心得 
+# 心得  
+[回前頁](https://sggsdatafornehs.github.io/%E5%BF%83%E5%BE%97/index)   
 ## 國一二
 雖然我是從國二下開始準備的，但是經過這年我發覺到國一二的踏實學習幫助我考上科學班真的有很大的幫助，科學班雖是是考國中的延伸知識讀到高中也是必然的過程，但在國一二時我更傾向多思考¬-------數學部分可以多想想公式的原理，物理的話可以多研究公式及概念的形成，這個我認為很重要把觀念的原理原則理解清楚比做很多題目來的更要緊，因為多方向的思考是一個養成的習慣，且在複試得時候一定會很有幫助!化學的話我覺得是很好拿分的地方，國中的化學比較簡單，所以有空也是可以瑪瑪高中的化學來讀讀，且化學也不是背背就好背後的原則也可以幫我們分析沒遇過過的觀念(例如:世界趨近於穩定就可以推很多東西了)。
 
