--- a/心得/7.md
+++ b/心得/7.md
@@ -1,4 +1,6 @@
 # 心得  
+
+[回前頁](https://sggsdatafornehs.github.io/%E5%BF%83%E5%BE%97/index)   
 ## 前言  
 我是從國小就對數學比較有興趣，各項競賽也都有參與，所以也有不錯的基礎，國中時期也有參加各項競賽，一直維持手感。      
 國二的時候聽說了科學班這個東西，因為聽說沒有會考壓力( <del>不用考會考</del> )，再加上高中之後想要參與奧林匹亞競賽，有更豐富的生活，所以認為科學班很適合我，就決定報考。  
