--- a/心得/7.md
+++ b/心得/7.md
@@ -1,3 +1,11 @@
+---
+title: 林晉宇的心得
+date: 2022-3-30 10:25:23
+tags: [科學班, 林晉宇, 心得]
+---
+
+
+
 # 心得  
 
 [回前頁](https://sggsdatafornehs.github.io/%E5%BF%83%E5%BE%97/index)   
