--- a/心得/6.md
+++ b/心得/6.md
@@ -1,3 +1,8 @@
+---
+title: 阮奕銨的心得
+date: 2022-3-30 10:49:29
+tags: [科學班, 阮奕銨, 心得]
+---
 # 心得  
 [回前頁](https://sggsdatafornehs.github.io/%E5%BF%83%E5%BE%97/index)   
 ## 國一二
