--- a/心得/3.md
+++ b/心得/3.md
@@ -1,4 +1,13 @@
+---
+title: 蔡睿軒的心得
+date: 2022-4-6 08:11:41
+tags: [科學班, 蔡睿軒, 心得]
+---
+
+
 # 心得  
+
+[回前頁](https://sggsdatafornehs.github.io/%E5%BF%83%E5%BE%97/index)   
 ## 前言
 清明一如往常的雨撲簌簌，樹葉依舊被拍響著。北風挾帶著穹淚四處遊蕩，飄，雨點的裡外還有那一絲最後傲骨的春寒，窗外的卻不爭氣地落花了。清明時節雨紛紛，哀傷落了舊花，卻綻放了榜上的新苞。  
 	三月三十號，惱人的午休，成績還沒出來，要睡也睡不著。突然，自動重新整理的網頁更新了，大家蜂擁而至。電腦螢幕上，細膩的表格，第一行第一列果然不出所料，我的名字在那。我錄取了新竹實驗高中科學班。剎那間好像不是巨大的喜悅奔擁而上；好像不是過度的嘈雜；好像只是無垠的平靜；好像是舒服的。其實過了良久，我才認定了這個事實。大多數重大的轉折皆是如此，第一時間沒有過度的反應，之後才能繼續接著這條新鋪的路走下去。  
