--- a/心得/7.md
+++ b/心得/7.md
@@ -21,7 +21,7 @@ tags: [科學班, 林晉宇, 心得]
 [4.各縣市科學班歷屆](https://feebee.com.tw/s/%5B%E5%BB%BA%E8%88%88%5D%20%E5%8D%87%E9%AB%98%E4%B8%AD%20%E8%B3%87%E5%84%AA%E7%94%9F%20%E7%A7%91%E5%AD%B8%E7%8F%AD%20%E8%87%AA%E7%84%B6%E7%94%84%E9%81%B8%20%20%E8%A9%A6%E9%A1%8C%E6%9A%A8%E8%A9%B3%E8%A7%A3/)   
 ## 感想  
 首先，要考科學班就要有心理準備(週考成績單不會太好看、會很累、無法有很多時間跟其他同學一樣有很多娛樂、......很多)，但你從準備也能得到樂趣   
-再來，要先做好心理建設，畢竟科學班真的有點吃運氣和天分。考上了當然是恭喜，沒考上也不要灰心，再接再厲，畢竟準備過程學到的東西也能讓你高中便很輕鬆!!!(畢竟本人收到成績單也很緊張，要上不上的，結果到了公佈名單段考那天根本不能好好考試，不像另外兩位大神，考那麼高，最後還用vbs在那邊刷網頁)     
+再來，要先做好心理建設，畢竟科學班真的有點吃運氣。考上了當然是恭喜，沒考上也不要灰心，再接再厲，畢竟準備過程學到的東西也能讓你高中便很輕鬆!!!(畢竟本人收到成績單也很緊張，結果到了公佈名單段考那天根本不能好好考試，不像另外兩位大神，考那麼高，最後還用vbs在那邊刷網頁)     
 最後，也要謝謝父母，老師的支持和從旁協助以及指導，當然也要謝謝在最後一年我們互相學習的同學們!!!
 恩...大概就這樣，祝福有熱忱，想努力的大家!!!   
 2022/3/31 林晉宇
